# Trombone

./: Cargo.toml  README.md  build.rs  flake.nix
data/: gresource.xml  style.css  xyz.karpador.Trombone.desktop  xyz.karpador.Trombone.gschema.xml  xyz.karpador.Trombone.metainfo.xml
src/: actions.rs  main.rs
src/components/: mod.rs
src/components/sidebar/: item.rs  mod.rs
src/data/: mod.rs
