[package]
name = "trombone"
description = "Gtk+ Fediverse client in Rust with Relm4"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
gio = "0.20.12"
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
relm4-icons = { git = "https://github.com/Follpvosten/relm4-icons", branch = "bundled-icon-prefix" }
strum = { version = "0.27.1", features = ["derive"] }

[build-dependencies]
glib-build-tools = "0.20.0"
relm4-icons-build = { git = "https://github.com/Follpvosten/relm4-icons", branch = "bundled-icon-prefix" }
